# diskless-shellcode-loader

./: CMakeLists.txt  README.md  main.c
include/: crypt.c  crypt.h  http.c  kb.c  kb.h  nt.c
modules/: test.c
